# ftk

./: Makefile.in  configure.in  mkinstalldirs
apps/: Makefile.am  Makefile.in
apps/bluetooth/: Makefile.am  bt.c  bt.h  ftk_app_bluetooth.c  ftk_app_bluetooth.h  main.c  uart.c  uart.h
apps/bluetooth/data/: Makefile.am  bluetooth.desktop
apps/bluetooth/icons/: Makefile.am
apps/calculator/: Makefile.in
apps/calculator/data/: Makefile.in
apps/calculator/icons/: Makefile.in
apps/clock/: Makefile.am  ftk_app_clock.c  ftk_app_clock.h  main.c
apps/clock/data/: Makefile.am  clock.desktop
apps/clock/icons/: Makefile.am
apps/common/: Makefile.in
apps/desktop/: Makefile.in  main.c
apps/desktop/icons/: Makefile.in
apps/filemanager/: Makefile.in
apps/gallery/: Makefile.in
apps/launcher/: Makefile.in
apps/movie/: Makefile.am  ftk_app_movie.c  ftk_app_movie.h  main.c
apps/movie/data/: Makefile.am  movie.desktop
apps/movie/icons/: Makefile.am
apps/music/: Makefile.am  ftk_app_music.c  ftk_app_music.h  main.c
apps/music/data/: Makefile.am  music.desktop
apps/music/icons/: Makefile.am
apps/shell/: Makefile.in
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
data/: Makefile.am  Makefile.in
docs/: Makefile.in
docs/reference/: Makefile.in
fbus/: Makefile.in
fbus/demo/: Makefile.in
ftk-1.0/: aclocal.m4  configure
opengles/: Makefile.in
opengles/include/: Makefile.in
opengles/redbook/: Makefile.in
opengles/src/: Makefile.in
opengles/ug/: Makefile.in
po/: zh_CN.gmo
script_binding/: Makefile.in
script_binding/lua/: Makefile.in
services/: Makefile.in
services/fconf/: Makefile.in
src/: Makefile.am  Makefile.in  ftk.c  ftk_app_window.c  ftk_app_window.h  ftk_dlfcn.c  ftk_file_browser.c  ftk_file_system.c
src/backend/: Makefile.in
src/compiler/: Makefile.in
src/demos/: Makefile.in
src/im/: Makefile.in
src/os/: Makefile.in
src/os/psp/: Makefile.in
src/test/: Makefile.in
testdata/: Makefile.in
theme/: Makefile.in
theme/default/: Makefile.am  Makefile.in
tools/: Makefile.in
tools/cross-build/: Makefile.in
tools/fbusgen/: Makefile.in
tools/fontextract/: Makefile.in
tools/imconvert/: Makefile.in
tools/luagen/: Makefile.in
(+28 files in other folders)
